enviroment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: getting-started
spec:
  type: ClusterIP
  selector:
    app: getting-started
  ports:
    - port: 8080
      targetPort: 8080
