enviroment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: getting-started-docker-getting-started
            port:
              number: 8080
